Added monocle for running tests in headless mode, including all the necessary maven rules and command-line arguments.