@@ -200,14 +200,12 @@
         </dependency>
 
         <!-- jdk-9+181 for Java 9 -->
-        <!--
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>openjfx-monocle</artifactId>
             <version>8u76-b04</version> 
             <scope>test</scope>
         </dependency>
-        -->
         
         <!--
         <dependency>
@@ -444,6 +442,53 @@
                 <version>3.7.0</version>
             </plugin>
             
+            <!-- Make ext dir which includes monocle -->
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-external-jars</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/java-extensions</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${java.home}/lib/ext/</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <dependencyfilesets prefix="mydeps."/>
+                                <mkdir dir="target/java-extensions"/>
+                                <copy todir="target/java-extensions">
+                                    <fileset refid="mydeps.org.testfx:openjfx-monocle:jar"/>
+                                </copy>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
             <!-- Skip surefire, just run failsafe, from https://stackoverflow.com/questions/31474560/is-isolation-of-failsafe-and-surefire-runs-from-each-other-using-a-skip-approach -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -461,8 +506,8 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.20.1</version>
                 <configuration>
-                    <!-- <argLine>-Xmx1G -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.text=t2k -Dtestfx.setup.timeout=2500</argLine> -->
-                    <argLine>-Xmx1G</argLine>
+                    <argLine>-Xmx1G -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.text=t2k -Dtestfx.setup.timeout=5000 -Dglass.platform=Monocle -Dmonocle.platform=Headless -Djava.ext.dirs=${project.basedir}/target/java-extensions</argLine>
+                    <!-- <argLine>-Xmx1G</argLine> -->
                     <skipAfterFailureCount>0</skipAfterFailureCount>
                     <includes>
                         <include>**/Test*.java</include>
